task-12-k8s-vs-containers/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financial-portal
  namespace: financial-portal
spec:
  selector:
    app: financial-portal
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
